<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadDocsActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInpBarNum"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        app:endIconContentDescription="@string/barcode_id_s"
        android:hint="@string/enter_barcode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditInpBarNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:backgroundTint="#F6F4F4"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/chooseFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInpBarNum"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:text="@string/choose_file"
        android:textColor="@color/black" />



    <Button
        android:id="@+id/scanBar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseFile"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/upload_file"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scanBar" />
    <ProgressBar
        android:id="@+id/progressUpload"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>