<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_bottom_sheet"
    android:orientation="vertical"
    tools:context=".AddValves"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valveName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/valve_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editValveName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F6F4F4"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bar_id_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/barcode_id_s"
        app:endIconContentDescription="@string/barcode_id_s">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_bar_id_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F6F4F4"
            android:inputType="textMultiLine"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content">

        <Button
            android:id="@+id/shareQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/printQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/print"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"

            android:layout_marginBottom="12dp"
            android:text="@string/generate_qr"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>


    <ImageView
        android:id="@+id/showBar"
        android:layout_marginTop="16dp"
        android:layout_width="212dp"
        android:layout_gravity="center"
        android:layout_height="212dp"
        android:contentDescription="@string/showbar" />

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>