<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="Enter Details"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textSize="20dp"
                android:layout_marginLeft="12dp"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/add_new"
                android:layout_height="wrap_content"
                android:text="ADD NEW"
                android:layout_alignParentRight="true"
                android:visibility="gone"/>

        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/heat_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Heat Number"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Size"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/class_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Class"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/casting_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Type of Casting"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/material_of_construction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="Material of Construction"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/generate_barcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/purple_500"
            android:text="Generate Barcode"
            android:textColor="@android:color/white" />
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip"
            android:layout_width="fill_parent" android:layout_height="wrap_content">

            <Button
                android:id="@+id/shareBar"
                android:layout_marginEnd="5dp"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:text="@string/share"
                android:layout_weight="1.0" />

            <Button
                android:layout_marginEnd="5dp"
                android:id="@+id/printBar"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:text="@string/print"
                android:layout_weight="1.0" />

        </LinearLayout>
        <ImageView
            android:id="@+id/barcode_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            tools:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/barcode_hrt"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="123456"
            />

    </LinearLayout>
</ScrollView>